[package]
name = "http-catlog"
version = "0.1.0"
edition = "2021"
authors = ["Justhiro55"]
description = "Monitor logs and display cat images when HTTP errors are detected"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Justhiro55/catlog"
homepage = "https://github.com/Justhiro55/catlog"
documentation = "https://docs.rs/catlog"
readme = "README.md"
keywords = ["log", "monitoring", "http", "cli", "cat"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "catlog"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = "0.12"
image = "0.24"
viuer = "0.7"
regex = "1.11"
anyhow = "1.0"
colored = "2.1"
notify = "6.1"
